# LicensePlateDetector

./: CMakeLists.txt  annotations.json  main.cpp  proj.cpp  proj.h  test.cpp
